[gd_scene load_steps=3 format=3 uid="uid://dqex7rpn30vkp"]

[ext_resource type="Script" path="res://gui/main_menu.gd" id="1_g6uru"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ix1ce"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6uru")

[node name="MenuVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 137.0
offset_right = 230.0
offset_bottom = 151.0

[node name="TitleLabel" type="Label" parent="MenuVBoxContainer"]
layout_mode = 2
text = "Game Name"

[node name="StartButton" type="Button" parent="MenuVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
text = "Start"

[node name="SoundHBoxContainer" type="HBoxContainer" parent="MenuVBoxContainer"]
layout_mode = 2

[node name="SoundImage" type="TextureRect" parent="MenuVBoxContainer/SoundHBoxContainer"]
layout_mode = 2
texture = SubResource("NoiseTexture2D_ix1ce")
expand_mode = 2

[node name="SoundSlider" type="HSlider" parent="MenuVBoxContainer/SoundHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 1.105

[node name="CreditsButton" type="Button" parent="MenuVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MenuVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 10)
layout_mode = 2
text = "Quit"
